add technical text to field other skills text

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </div>
 
             <div class="none-related">
-                <h3>Other Skills</h3>
+                <h3>Other Technical Skills</h3>
                 <!----------- !!! skill items !!! -------------->
                 <div class="skill-item">
                     <h4>Blender 3D</h4>
