--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
     <!------------------- !!! Links !!! ------------------>
 
     <title>Abd-Alrahman Ata</title>
+    <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "rjg7bewn1g");
+</script>
 </head>
 
 <body>
