--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
         y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
     })(window, document, "clarity", "script", "rjg7bewn1g");
 </script>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VE22CE6FEJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VE22CE6FEJ');
+</script>
 </head>
 
 <body>
